--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "@types/react-dom": "18.0.9",
     "bcrypt": "^5.1.0",
     "eslint": "8.28.0",
-    "eslint-config-next": "^13.1.2",
-    "next": "^13.2.4",
+    "eslint-config-next": "^14.2.3",
+    "next": "^14.2.3",
     "next-auth": "^4.20.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.56.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "prisma": "^4.7.0"
+    "prisma": "^4.7.0",
+    "sqlite3": "^5.1.7"
   }
 }
